fix: adjust positioning of checkmark in custom checkbox for better alignment

--- a/src/app/khiops-library/components/ag-grid/checkbox-cell/checkbox-cell.component.scss
+++ b/src/app/khiops-library/components/ag-grid/checkbox-cell/checkbox-cell.component.scss
@@ -45,8 +45,8 @@
 }
 
 .custom-checkbox .checkmark:after {
-  left: 4px;
-  top: 1px;
+  left: 3px;
+  top: -1px;
   width: 5px;
   height: 9px;
   border: solid #fff;
